syntax = "proto3";

import "google/protobuf/timestamp.proto";
option java_multiple_files=true;
option java_package="com.javatechie.grpc";
option  java_outer_classname="StockTradingProto";

service StockTradingService {

  rpc getStockPrice(StockRequest) returns (StockResponse);
}

message StockRequest {
  string symbol = 1;
}

message StockResponse {
  string symbol = 1;
  double price = 2;
  google.protobuf.Timestamp time = 3;
}